testdata/baselines/reference/submodule/compiler/jsxFragmentAndFactoryUsedOnFragmentUse.errors.txt
index.tsx(1,9): error TS6133: 'element' is declared but its value is never read.


==== index.tsx (1 errors) ====
    import {element, fragment} from "./jsx";
            ~~~~~~~
!!! error TS6133: 'element' is declared but its value is never read.
    
    export const a = <>fragment text</>
    
==== jsx.ts (0 errors) ====
    export function element() {}
    
    export function fragment() {}